--- a/labs/lab-5/static/style.css
+++ b/labs/lab-5/static/style.css
@@ -1,14 +1,169 @@
 body {
-    background-color: lightblue;
-  }
-  
-  h1 {
-    color: blueviolet;
+    font-family: "Comic Sans MS", cursive;
+    background-color: #ff69b4;
+    margin: 0;
+    padding: 20px;
+}
+
+.header {
+    background-color: #ffff00;
+    padding: 10px;
     text-align: center;
-  }
-  
-  p {
-    font-family: verdana;
+    border: 5px solid #ff0000;
+}
+
+.logo {
+    font-size: 30px;
+    color: #ff0000;
+    font-weight: bold;
+}
+
+.nav {
+    background-color: #00ff00;
+    padding: 15px;
+    text-align: center;
+    border: 3px solid #0000ff;
+}
+
+.nav a {
+    color: #000000;
+    text-decoration: none;
     font-size: 20px;
+    margin: 0 20px;
+    padding: 10px;
+    background-color: #ffffff;
+    border: 2px solid #ff0000;
+}
+
+.nav a:hover {
+    background-color: #ff0000;
+    color: #ffffff;
+}
+
+
+.main {
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 20px 0;
+    border: 5px dashed #000000;
+}
+
+
+h1 {
+    color: #ff0000;
+    font-size: 15px; 
     text-align: center;
-  }
+    background-color: #ffff00;
+    padding: 5px;
+    border: 2px solid #0000ff;
+}
+
+h2 {
+    color: #0000ff;
+    font-size: 50px; 
+    background-color: #ff69b4;
+    padding: 30px;
+    border: 10px solid #ff0000;
+}
+
+h3 {
+    color: #00ff00;
+    font-size: 8px; 
+    background-color: #000000;
+    padding: 2px;
+    border: 1px solid #ffffff;
+}
+
+
+p {
+    font-size: 35px; 
+    line-height: 0.8; 
+    color: #000000;
+    background-color: #f0f0f0;
+    padding: 5px; 
+    margin: 50px 0; 
+    border: 15px solid #cccccc; 
+}
+
+
+.small-text {
+    font-size: 4px; 
+    line-height: 0.5;
+    color: #666666;
+    background-color: #ffffff;
+    padding: 1px;
+    margin: 1px 0;
+    border: 0.5px solid #000000;
+}
+
+
+.form {
+    background-color: #e6e6e6;
+    padding: 20px;
+    border: 5px solid #ff0000;
+    margin: 20px 0;
+}
+
+.form input, .form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0;
+    border: 3px solid #0000ff;
+    background-color: #ffffcc;
+    font-size: 16px;
+}
+
+.form button {
+    background-color: #ff0000;
+    color: #ffffff;
+    padding: 15px 30px;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+
+.image {
+    width: 50px; 
+    height: 300px; 
+    border: 25px solid #ff0000; 
+    margin: 100px; 
+    background-color: #cccccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    font-weight: bold;
+    font-size: 2px; 
+}
+
+
+.large-image {
+    width: 800px; 
+    height: 50px; 
+    border: 2px solid #00ff00; 
+    margin: 2px; 
+    background-color: #ff00ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 60px; 
+}
+
+.footer {
+    background-color: #000000;
+    color: #ffffff;
+    text-align: center;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+
+.bad-practice {
+    font-size: 12px; 
+    color: #666666; 
+    text-align: justify; 
+    line-height: 1.0; 
+}
